--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "protomq",
   "version": "1.0.0",
   "description": "Dynamic MQTT broker that speaks protobufs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "vite dev",
+    "broker": "node broker.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Loren Norman",
