--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "vite dev",
+    "start": "(trap 'kill 0' SIGINT; npm run web & npm run broker)",
+    "web": "vite dev --clearScreen=false",
     "broker": "node broker.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +14,9 @@
   "license": "MIT",
   "dependencies": {
     "aedes": "^0.48.0",
+    "websocket-stream": "^5.5.2"
+  },
+  "devDependencies": {
     "vite": "^3.2.4"
   }
 }
