--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "aedes": "^0.48.0",
+    "lodash-es": "^4.17.21",
     "websocket-stream": "^5.5.2"
   },
   "devDependencies": {
