--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "Loren Norman",
   "license": "MIT",
   "dependencies": {
+    "@vitejs/plugin-vue": "^3.2.0",
     "aedes": "^0.48.0",
     "google-protobuf": "^3.21.2",
     "lodash-es": "^4.17.21",
+    "pinia": "^2.0.26",
+    "vue": "^3.2.45",
     "websocket-stream": "^5.5.2"
   },
   "devDependencies": {
