--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vitejs/plugin-vue": "^3.2.0",
     "aedes": "^0.48.0",
     "google-protobuf": "^3.21.2",
+    "idb-keyval": "^6.2.0",
     "lodash-es": "^4.17.21",
     "pinia": "^2.0.26",
     "vue": "^3.2.45",
