--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "convert-protos": "pbjs -t json protobufs/signal.proto > protobufs/bundle.json",
     "import-protos": "node script/copy_and_transform_protobufs.js",
+    "build-web": "vite build",
     "start": "(trap 'kill 0' SIGINT; npm run web & npm run broker)",
+    "main": "node main.js",
     "web": "vite dev --clearScreen=false",
     "broker": "node broker.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +19,7 @@
   "dependencies": {
     "@vitejs/plugin-vue": "^5.0",
     "aedes": "^0.48.0",
+    "express": "^4.19.2",
     "google-protobuf": "^3.21.2",
     "idb-keyval": "^6.2.0",
     "lodash-es": "^4.17.21",
