--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "import-protos": "node script/copy_and_transform_protobufs.js",
     "build-web": "vite build",
     "start": "node main.js",
+    "dev-broker": "nodemon main.js",
     "web": "vite dev --clearScreen=false",
     "broker": "node broker.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,7 +23,9 @@
     "google-protobuf": "^3.21.2",
     "idb-keyval": "^6.2.0",
     "lodash-es": "^4.17.21",
+    "nodemon": "^3.1.0",
     "pinia": "^2.1",
+    "protobufjs": "^7.2.6",
     "vue": "^3.4",
     "websocket-stream": "^5.5.2"
   },
